welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: Missing closing brace `}' assumed here
override def run() {
^Array2:1: error: expected start of definition
override def run() {
         ^Array2:20: error: Missing closing brace `}' assumed here
    }
    ^